--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Project specific
+anki-addon-directory/
+ds4-env/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -5,6 +9,8 @@ __pycache__/
 
 # C extensions
 *.so
+
+
 
 # Distribution / packaging
 .Python
