--- a/ds4_support/config.json
+++ b/ds4_support/config.json
@@ -1,4 +1,291 @@
 {
-    "flags": [1, 2, 3, 4, 5, 6, 7, 0]
+    "flags": [1, 2, 3, 4, 5, 6, 7, 0],
 
+    "reviewer_question": {
+        "CROSS": "Flip Card", 
+        "CIRCLE": "",
+        "SQUARE": "",
+        "TRIANGLE": "",
+        "L1": "",
+        "R1": "",
+        "SHARE": "Fullscreen",
+        "OPTIONS": "",
+        "DPAD_UP": "Undo",
+        "DPAD_DOWN": "Replay Audio",
+        "DPAD_LEFT": "Cycle Flag",
+        "DPAD_RIGHT": "Show Hint",
+        "PS": "",
+        "PAD": "Sync",
+
+        "L1 + CROSS": "Bury Card",
+        "L1 + CIRCLE": "Bury Note",
+        "L1 + SQUARE": "Suspend Note",
+        "L1 + TRIANGLE": "Suspend Card",
+        "L1 + SHARE": "",
+        "L1 + OPTIONS": "Options Menu",
+        "L1 + DPAD_UP": "",
+        "L1 + DPAD_DOWN": "",
+        "L1 + DPAD_LEFT": "Mark Note",
+        "L1 + DPAD_RIGHT": "",
+        "L1 + PS": "",
+        "L1 + PAD": "",
+
+        "R2 + CROSS": "",
+        "R2 + CIRCLE": "",
+        "R2 + SQUARE": "",
+        "R2 + TRIANGLE": "",
+        "R2 + SHARE": "",
+        "R2 + OPTIONS": "",
+        "R2 + DPAD_UP": "",
+        "R2 + DPAD_DOWN": "",
+        "R2 + DPAD_LEFT": "",
+        "R2 + DPAD_RIGHT": "",
+        "R2 + PS": "",
+        "R2 + PAD": "",
+
+        "L2 + R2 + CROSS": "Delete Note",
+        "L2 + R2 + CIRCLE": "",
+        "L2 + R2 + SQUARE": "",
+        "L2 + R2 + TRIANGLE": "",
+        "L2 + R2 + SHARE": "",
+        "L2 + R2 + OPTIONS": "",
+        "L2 + R2 + DPAD_UP": "",
+        "L2 + R2 + DPAD_DOWN": "",
+        "L2 + R2 + DPAD_LEFT": "",
+        "L2 + R2 + DPAD_RIGHT": "",
+        "L2 + R2 + PS": "",
+        "L2 + R2 + PAD": ""
+    },
+    
+    "reviewer_answer": {
+
+        "CROSS":"Answer 3", 
+        "CIRCLE": "Answer 1",
+        "SQUARE": "Answer 2",
+        "TRIANGLE": "Answer 4",
+        "L1": "",
+        "R1": "",
+        "SHARE": "Fullscreen",
+        "OPTIONS": "",
+        "DPAD_UP": "",
+        "DPAD_DOWN": "",
+        "DPAD_LEFT": "",
+        "DPAD_RIGHT": "",
+        "PS": "",
+        "PAD": "Sync",
+
+        "L1 + CROSS": "Bury Card",
+        "L1 + CIRCLE": "Bury Note",
+        "L1 + SQUARE": "Suspend Note",
+        "L1 + TRIANGLE": "Suspend Card",
+        "L1 + SHARE": "",
+        "L1 + OPTIONS": "Options Menu",
+        "L1 + DPAD_UP": "",
+        "L1 + DPAD_DOWN": "",
+        "L1 + DPAD_LEFT": "Mark Note",
+        "L1 + DPAD_RIGHT": "",
+        "L1 + PS": "",
+        "L1 + PAD": "",
+
+        "R2 + CROSS": "",
+        "R2 + CIRCLE": "",
+        "R2 + SQUARE": "",
+        "R2 + TRIANGLE": "",
+        "R2 + SHARE": "",
+        "R2 + OPTIONS": "",
+        "R2 + DPAD_UP": "",
+        "R2 + DPAD_DOWN": "",
+        "R2 + DPAD_LEFT": "",
+        "R2 + DPAD_RIGHT": "",
+        "R2 + PS": "",
+        "R2 + PAD": "",
+
+        "L2 + R2 + CROSS": "Delete Note",
+        "L2 + R2 + CIRCLE": "",
+        "L2 + R2 + SQUARE": "",
+        "L2 + R2 + TRIANGLE": "",
+        "L2 + R2 + SHARE": "",
+        "L2 + R2 + OPTIONS": "",
+        "L2 + R2 + DPAD_UP": "",
+        "L2 + R2 + DPAD_DOWN": "",
+        "L2 + R2 + DPAD_LEFT": "",
+        "L2 + R2 + DPAD_RIGHT": "",
+        "L2 + R2 + PS": "",
+        "L2 + R2 + PAD": ""
+    
+    },
+    
+    "decks": {
+
+        "CROSS":"Study Deck",
+        "CIRCLE": "Collapse/Expand Deck",
+        "SQUARE": "Browser",
+        "TRIANGLE": "Stats",
+        "L1": "",
+        "R1": "",
+        "SHARE": "Fullscreen",
+        "OPTIONS": "",
+        "DPAD_UP": "",
+        "DPAD_DOWN": "Select Next Deck",
+        "DPAD_LEFT": "Select Previous Deck",
+        "DPAD_RIGHT": "",
+        "PS": "",
+        "PAD": "Sync",
+
+        "L1 + CROSS": "",
+        "L1 + CIRCLE": "",
+        "L1 + SQUARE": "",
+        "L1 + TRIANGLE": "",
+        "L1 + SHARE": "",
+        "L1 + OPTIONS": "",
+        "L1 + DPAD_UP": "",
+        "L1 + DPAD_DOWN": "",
+        "L1 + DPAD_LEFT": "",
+        "L1 + DPAD_RIGHT": "",
+        "L1 + PS": "",
+        "L1 + PAD": "",
+
+        "R2 + CROSS": "",
+        "R2 + CIRCLE": "",
+        "R2 + SQUARE": "",
+        "R2 + TRIANGLE": "",
+        "R2 + SHARE": "",
+        "R2 + OPTIONS": "",
+        "R2 + DPAD_UP": "",
+        "R2 + DPAD_DOWN": "",
+        "R2 + DPAD_LEFT": "",
+        "R2 + DPAD_RIGHT": "",
+        "R2 + PS": "",
+        "R2 + PAD": "",
+
+        "L2 + R2 + CROSS": "",
+        "L2 + R2 + CIRCLE": "",
+        "L2 + R2 + SQUARE": "",
+        "L2 + R2 + TRIANGLE": "",
+        "L2 + R2 + SHARE": "",
+        "L2 + R2 + OPTIONS": "",
+        "L2 + R2 + DPAD_UP": "",
+        "L2 + R2 + DPAD_DOWN": "",
+        "L2 + R2 + DPAD_LEFT": "",
+        "L2 + R2 + DPAD_RIGHT": "",
+        "L2 + R2 + PS": "",
+        "L2 + R2 + PAD": ""
+    
+    },
+    
+    "overview": {
+    
+        "CROSS":"", 
+        "CIRCLE": "",
+        "SQUARE": "",
+        "TRIANGLE": "",
+        "L1": "",
+        "R1": "",
+        "SHARE": "",
+        "OPTIONS": "",
+        "DPAD_UP": "",
+        "DPAD_DOWN": "",
+        "DPAD_LEFT": "",
+        "DPAD_RIGHT": "",
+        "PS": "",
+        "PAD": "Sync",
+
+        "L1 + CROSS": "",
+        "L1 + CIRCLE": "",
+        "L1 + SQUARE": "",
+        "L1 + TRIANGLE": "",
+        "L1 + SHARE": "",
+        "L1 + OPTIONS": "",
+        "L1 + DPAD_UP": "",
+        "L1 + DPAD_DOWN": "",
+        "L1 + DPAD_LEFT": "",
+        "L1 + DPAD_RIGHT": "",
+        "L1 + PS": "",
+        "L1 + PAD": "",
+
+        "R2 + CROSS": "",
+        "R2 + CIRCLE": "",
+        "R2 + SQUARE": "",
+        "R2 + TRIANGLE": "",
+        "R2 + SHARE": "",
+        "R2 + OPTIONS": "",
+        "R2 + DPAD_UP": "",
+        "R2 + DPAD_DOWN": "",
+        "R2 + DPAD_LEFT": "",
+        "R2 + DPAD_RIGHT": "",
+        "R2 + PS": "",
+        "R2 + PAD": "",
+
+        "L2 + R2 + CROSS": "",
+        "L2 + R2 + CIRCLE": "",
+        "L2 + R2 + SQUARE": "",
+        "L2 + R2 + TRIANGLE": "",
+        "L2 + R2 + SHARE": "",
+        "L2 + R2 + OPTIONS": "",
+        "L2 + R2 + DPAD_UP": "",
+        "L2 + R2 + DPAD_DOWN": "",
+        "L2 + R2 + DPAD_LEFT": "",
+        "L2 + R2 + DPAD_RIGHT": "",
+        "L2 + R2 + PS": "",
+        "L2 + R2 + PAD": ""
+
+    },
+    
+    "stats": {
+
+        "CROSS":"", 
+        "CIRCLE": "",
+        "SQUARE": "",
+        "TRIANGLE": "",
+        "L1": "",
+        "R1": "",
+        "SHARE": "Fullscreen",
+        "OPTIONS": "",
+        "DPAD_UP": "",
+        "DPAD_DOWN": "",
+        "DPAD_LEFT": "",
+        "DPAD_RIGHT": "",
+        "PS": "",
+        "PAD": "",
+
+        "L1 + CROSS": "",
+        "L1 + CIRCLE": "",
+        "L1 + SQUARE": "",
+        "L1 + TRIANGLE": "",
+        "L1 + SHARE": "",
+        "L1 + OPTIONS": "",
+        "L1 + DPAD_UP": "",
+        "L1 + DPAD_DOWN": "",
+        "L1 + DPAD_LEFT": "",
+        "L1 + DPAD_RIGHT": "",
+        "L1 + PS": "",
+        "L1 + PAD": "",
+
+        "R2 + CROSS": "",
+        "R2 + CIRCLE": "",
+        "R2 + SQUARE": "",
+        "R2 + TRIANGLE": "",
+        "R2 + SHARE": "",
+        "R2 + OPTIONS": "",
+        "R2 + DPAD_UP": "",
+        "R2 + DPAD_DOWN": "",
+        "R2 + DPAD_LEFT": "",
+        "R2 + DPAD_RIGHT": "",
+        "R2 + PS": "",
+        "R2 + PAD": "",
+
+        "L2 + R2 + CROSS": "",
+        "L2 + R2 + CIRCLE": "",
+        "L2 + R2 + SQUARE": "",
+        "L2 + R2 + TRIANGLE": "",
+        "L2 + R2 + SHARE": "",
+        "L2 + R2 + OPTIONS": "",
+        "L2 + R2 + DPAD_UP": "",
+        "L2 + R2 + DPAD_DOWN": "",
+        "L2 + R2 + DPAD_LEFT": "",
+        "L2 + R2 + DPAD_RIGHT": "",
+        "L2 + R2 + PS": "",
+        "L2 + R2 + PAD": ""
+    
+    }
 }
