Add help overlay

--- a/ds4_support/config.json
+++ b/ds4_support/config.json
@@ -1,15 +1,15 @@
 {
-    "flags": [1, 2, 3, 4, 5, 6, 7, 0],
+    "flags": [1, 2, 3, 4, 5, 6, 7],
 
-    "reviewer_question": {
-        "CROSS": "Flip Card", 
+    "question": {
+        "CROSS": "Enter", 
         "CIRCLE": "",
         "SQUARE": "",
         "TRIANGLE": "",
-        "L1": "",
-        "R1": "",
+        "L1": "Back",
+        "R1": "Forward",
         "SHARE": "Fullscreen",
-        "OPTIONS": "",
+        "OPTIONS": "Options",
         "DPAD_UP": "Undo",
         "DPAD_DOWN": "Replay Audio",
         "DPAD_LEFT": "Cycle Flag",
@@ -17,218 +17,163 @@
         "PS": "",
         "PAD": "Sync",
 
-        "L1 + CROSS": "Bury Card",
-        "L1 + CIRCLE": "Bury Note",
-        "L1 + SQUARE": "Suspend Note",
-        "L1 + TRIANGLE": "Suspend Card",
-        "L1 + SHARE": "",
-        "L1 + OPTIONS": "Options Menu",
-        "L1 + DPAD_UP": "",
-        "L1 + DPAD_DOWN": "",
-        "L1 + DPAD_LEFT": "Mark Note",
-        "L1 + DPAD_RIGHT": "",
-        "L1 + PS": "",
-        "L1 + PAD": "",
+        "L2 + CROSS": "Bury Card",
+        "L2 + CIRCLE": "Bury Note",
+        "L2 + SQUARE": "Suspend Note",
+        "L2 + TRIANGLE": "Suspend Card",
+        "L2 + SHARE": "Edit Note",
+        "L2 + OPTIONS": "Set Due Date",
+        "L2 + DPAD_UP": "Undo",
+        "L2 + DPAD_DOWN": "Redo",
+        "L2 + DPAD_LEFT": "Mark Note",
+        "L2 + DPAD_RIGHT": "Delete Note",
+        "L2 + PS": "",
+        "L2 + PAD": "",
 
-        "R2 + CROSS": "",
-        "R2 + CIRCLE": "",
-        "R2 + SQUARE": "",
-        "R2 + TRIANGLE": "",
+        "R2 + CROSS": "Record Voice",
+        "R2 + CIRCLE": "Replay Voice",
+        "R2 + SQUARE": "Pause Audio",
+        "R2 + TRIANGLE": "Card Info",
+        "R2 + OPTIONS": "Previous Card Info",
         "R2 + SHARE": "",
-        "R2 + OPTIONS": "",
-        "R2 + DPAD_UP": "",
-        "R2 + DPAD_DOWN": "",
-        "R2 + DPAD_LEFT": "",
-        "R2 + DPAD_RIGHT": "",
+        "R2 + DPAD_UP": "Volume Up",
+        "R2 + DPAD_DOWN": "Volume Down",
+        "R2 + DPAD_LEFT": "Audio -5s",
+        "R2 + DPAD_RIGHT": "Audio +5s",
         "R2 + PS": "",
-        "R2 + PAD": "",
-
-        "L2 + R2 + CROSS": "Delete Note",
-        "L2 + R2 + CIRCLE": "",
-        "L2 + R2 + SQUARE": "",
-        "L2 + R2 + TRIANGLE": "",
-        "L2 + R2 + SHARE": "",
-        "L2 + R2 + OPTIONS": "",
-        "L2 + R2 + DPAD_UP": "",
-        "L2 + R2 + DPAD_DOWN": "",
-        "L2 + R2 + DPAD_LEFT": "",
-        "L2 + R2 + DPAD_RIGHT": "",
-        "L2 + R2 + PS": "",
-        "L2 + R2 + PAD": ""
-    },
+        "R2 + PAD": "Quit"
+        },
     
-    "reviewer_answer": {
+    "answer": {
 
-        "CROSS":"Answer 3", 
-        "CIRCLE": "Answer 1",
-        "SQUARE": "Answer 2",
-        "TRIANGLE": "Answer 4",
-        "L1": "",
-        "R1": "",
+        "CROSS": "Good", 
+        "CIRCLE": "Again",
+        "SQUARE": "Hard",
+        "TRIANGLE": "Easy",
+        "L1": "Back",
+        "R1": "Forward",
         "SHARE": "Fullscreen",
-        "OPTIONS": "",
-        "DPAD_UP": "",
-        "DPAD_DOWN": "",
-        "DPAD_LEFT": "",
-        "DPAD_RIGHT": "",
+        "OPTIONS": "Options",
+        "DPAD_UP": "Undo",
+        "DPAD_DOWN": "Replay Audio",
+        "DPAD_LEFT": "Cycle Flag",
+        "DPAD_RIGHT": "Show Hint",
         "PS": "",
         "PAD": "Sync",
 
-        "L1 + CROSS": "Bury Card",
-        "L1 + CIRCLE": "Bury Note",
-        "L1 + SQUARE": "Suspend Note",
-        "L1 + TRIANGLE": "Suspend Card",
-        "L1 + SHARE": "",
-        "L1 + OPTIONS": "Options Menu",
-        "L1 + DPAD_UP": "",
-        "L1 + DPAD_DOWN": "",
-        "L1 + DPAD_LEFT": "Mark Note",
-        "L1 + DPAD_RIGHT": "",
-        "L1 + PS": "",
-        "L1 + PAD": "",
+        "L2 + CROSS": "Bury Card",
+        "L2 + CIRCLE": "Bury Note",
+        "L2 + SQUARE": "Suspend Note",
+        "L2 + TRIANGLE": "Suspend Card",
+        "L2 + SHARE": "Edit Note",
+        "L2 + OPTIONS": "Set Due Date",
+        "L2 + DPAD_UP": "Undo",
+        "L2 + DPAD_DOWN": "Redo",
+        "L2 + DPAD_LEFT": "Mark Note",
+        "L2 + DPAD_RIGHT": "Delete Note",
+        "L2 + PS": "",
+        "L2 + PAD": "",
 
-        "R2 + CROSS": "",
-        "R2 + CIRCLE": "",
-        "R2 + SQUARE": "",
-        "R2 + TRIANGLE": "",
+        "R2 + CROSS": "Record Voice",
+        "R2 + CIRCLE": "Replay Voice",
+        "R2 + SQUARE": "Pause Audio",
+        "R2 + TRIANGLE": "Card Info",
+        "R2 + OPTIONS": "Previous Card Info",
         "R2 + SHARE": "",
-        "R2 + OPTIONS": "",
-        "R2 + DPAD_UP": "",
-        "R2 + DPAD_DOWN": "",
-        "R2 + DPAD_LEFT": "",
-        "R2 + DPAD_RIGHT": "",
+        "R2 + DPAD_UP": "Volume Up",
+        "R2 + DPAD_DOWN": "Volume Down",
+        "R2 + DPAD_LEFT": "Audio -5s",
+        "R2 + DPAD_RIGHT": "Audio +5s",
         "R2 + PS": "",
-        "R2 + PAD": "",
-
-        "L2 + R2 + CROSS": "Delete Note",
-        "L2 + R2 + CIRCLE": "",
-        "L2 + R2 + SQUARE": "",
-        "L2 + R2 + TRIANGLE": "",
-        "L2 + R2 + SHARE": "",
-        "L2 + R2 + OPTIONS": "",
-        "L2 + R2 + DPAD_UP": "",
-        "L2 + R2 + DPAD_DOWN": "",
-        "L2 + R2 + DPAD_LEFT": "",
-        "L2 + R2 + DPAD_RIGHT": "",
-        "L2 + R2 + PS": "",
-        "L2 + R2 + PAD": ""
-    
+        "R2 + PAD": "Quit"    
     },
     
-    "decks": {
+    "deckBrowser": {
 
-        "CROSS":"Study Deck",
+        "CROSS": "Enter",
         "CIRCLE": "Collapse/Expand Deck",
         "SQUARE": "Browser",
-        "TRIANGLE": "Stats",
-        "L1": "",
-        "R1": "",
+        "TRIANGLE": "Statistics",
+        "L1": "Undo",
+        "R1": "Forward",
         "SHARE": "Fullscreen",
-        "OPTIONS": "",
-        "DPAD_UP": "",
-        "DPAD_DOWN": "Select Next Deck",
-        "DPAD_LEFT": "Select Previous Deck",
-        "DPAD_RIGHT": "",
+        "OPTIONS": "Options",
+        "DPAD_UP": "Previous Deck",
+        "DPAD_DOWN": "Next Deck",
+        "DPAD_LEFT": "Previous Due Deck",
+        "DPAD_RIGHT": "Next Due Deck",
         "PS": "",
         "PAD": "Sync",
 
-        "L1 + CROSS": "",
-        "L1 + CIRCLE": "",
-        "L1 + SQUARE": "",
-        "L1 + TRIANGLE": "",
-        "L1 + SHARE": "",
-        "L1 + OPTIONS": "",
-        "L1 + DPAD_UP": "",
-        "L1 + DPAD_DOWN": "",
-        "L1 + DPAD_LEFT": "",
-        "L1 + DPAD_RIGHT": "",
-        "L1 + PS": "",
-        "L1 + PAD": "",
+        "L2 + CROSS": "Study Deck",
+        "L2 + CIRCLE": "Add",
+        "L2 + SQUARE": "Filter",
+        "L2 + TRIANGLE": "Switch Profile",
+        "L2 + SHARE": "Help",
+        "L2 + OPTIONS": "Preferences",
+        "L2 + DPAD_UP": "Undo",
+        "L2 + DPAD_DOWN": "Redo",
+        "L2 + DPAD_LEFT": "Empty",
+        "L2 + DPAD_RIGHT": "Rebuild",
+        "L2 + PS": "",
+        "L2 + PAD": "About Anki",
 
-        "R2 + CROSS": "",
-        "R2 + CIRCLE": "",
-        "R2 + SQUARE": "",
-        "R2 + TRIANGLE": "",
-        "R2 + SHARE": "",
-        "R2 + OPTIONS": "",
-        "R2 + DPAD_UP": "",
-        "R2 + DPAD_DOWN": "",
-        "R2 + DPAD_LEFT": "",
-        "R2 + DPAD_RIGHT": "",
+        "R2 + CROSS": "Check Database",
+        "R2 + CIRCLE": "Check Media",
+        "R2 + SQUARE": "Empty Cards",
+        "R2 + TRIANGLE": "Manage Note Types",
+        "R2 + SHARE": "Anki Help",
+        "R2 + OPTIONS": "Menubar",
+        "R2 + DPAD_UP": "Volume Up",
+        "R2 + DPAD_DOWN": "Volume Down",
+        "R2 + DPAD_LEFT": "Import",
+        "R2 + DPAD_RIGHT": "Export",
         "R2 + PS": "",
-        "R2 + PAD": "",
-
-        "L2 + R2 + CROSS": "",
-        "L2 + R2 + CIRCLE": "",
-        "L2 + R2 + SQUARE": "",
-        "L2 + R2 + TRIANGLE": "",
-        "L2 + R2 + SHARE": "",
-        "L2 + R2 + OPTIONS": "",
-        "L2 + R2 + DPAD_UP": "",
-        "L2 + R2 + DPAD_DOWN": "",
-        "L2 + R2 + DPAD_LEFT": "",
-        "L2 + R2 + DPAD_RIGHT": "",
-        "L2 + R2 + PS": "",
-        "L2 + R2 + PAD": ""
-    
+        "R2 + PAD": "Quit"
     },
     
     "overview": {
     
-        "CROSS":"", 
-        "CIRCLE": "",
-        "SQUARE": "",
-        "TRIANGLE": "",
-        "L1": "",
-        "R1": "",
-        "SHARE": "",
-        "OPTIONS": "",
-        "DPAD_UP": "",
-        "DPAD_DOWN": "",
-        "DPAD_LEFT": "",
-        "DPAD_RIGHT": "",
+        "CROSS": "Enter", 
+        "CIRCLE": "Custom Study",
+        "SQUARE": "Browser",
+        "TRIANGLE": "Statistics",
+        "L1": "Back",
+        "R1": "Forward",
+        "SHARE": "Fullscreen",
+        "OPTIONS": "Options",
+        "DPAD_UP": "Previous Deck",
+        "DPAD_DOWN": "Next Deck",
+        "DPAD_LEFT": "Previous Due Deck",
+        "DPAD_RIGHT": "Next Due Deck",
         "PS": "",
         "PAD": "Sync",
 
-        "L1 + CROSS": "",
-        "L1 + CIRCLE": "",
-        "L1 + SQUARE": "",
-        "L1 + TRIANGLE": "",
-        "L1 + SHARE": "",
-        "L1 + OPTIONS": "",
-        "L1 + DPAD_UP": "",
-        "L1 + DPAD_DOWN": "",
-        "L1 + DPAD_LEFT": "",
-        "L1 + DPAD_RIGHT": "",
-        "L1 + PS": "",
-        "L1 + PAD": "",
+        "L2 + CROSS": "Description",
+        "L2 + CIRCLE": "Add",
+        "L2 + SQUARE": "Filter",
+        "L2 + TRIANGLE": "Switch Profile",
+        "L2 + SHARE": "Help",
+        "L2 + OPTIONS": "Preferences",
+        "L2 + DPAD_UP": "Undo",
+        "L2 + DPAD_DOWN": "Redo",
+        "L2 + DPAD_LEFT": "Empty",
+        "L2 + DPAD_RIGHT": "Rebuild",
+        "L2 + PS": "",
+        "L2 + PAD": "About Anki",
 
-        "R2 + CROSS": "",
-        "R2 + CIRCLE": "",
-        "R2 + SQUARE": "",
-        "R2 + TRIANGLE": "",
-        "R2 + SHARE": "",
-        "R2 + OPTIONS": "",
-        "R2 + DPAD_UP": "",
-        "R2 + DPAD_DOWN": "",
-        "R2 + DPAD_LEFT": "",
-        "R2 + DPAD_RIGHT": "",
+        "R2 + CROSS": "Check Database",
+        "R2 + CIRCLE": "Check Media",
+        "R2 + SQUARE": "Empty Cards",
+        "R2 + TRIANGLE": "Manage Note Types",
+        "R2 + SHARE": "Anki Help",
+        "R2 + OPTIONS": "Menubar",
+        "R2 + DPAD_UP": "Volume Up",
+        "R2 + DPAD_DOWN": "Volume Down",
+        "R2 + DPAD_LEFT": "Import",
+        "R2 + DPAD_RIGHT": "Export",
         "R2 + PS": "",
-        "R2 + PAD": "",
-
-        "L2 + R2 + CROSS": "",
-        "L2 + R2 + CIRCLE": "",
-        "L2 + R2 + SQUARE": "",
-        "L2 + R2 + TRIANGLE": "",
-        "L2 + R2 + SHARE": "",
-        "L2 + R2 + OPTIONS": "",
-        "L2 + R2 + DPAD_UP": "",
-        "L2 + R2 + DPAD_DOWN": "",
-        "L2 + R2 + DPAD_LEFT": "",
-        "L2 + R2 + DPAD_RIGHT": "",
-        "L2 + R2 + PS": "",
-        "L2 + R2 + PAD": ""
-
+        "R2 + PAD": "Quit"
     },
     
     "stats": {
@@ -237,8 +182,8 @@
         "CIRCLE": "",
         "SQUARE": "",
         "TRIANGLE": "",
-        "L1": "",
-        "R1": "",
+        "L1": "Back",
+        "R1": "Forward",
         "SHARE": "Fullscreen",
         "OPTIONS": "",
         "DPAD_UP": "",
@@ -248,18 +193,18 @@
         "PS": "",
         "PAD": "",
 
-        "L1 + CROSS": "",
-        "L1 + CIRCLE": "",
-        "L1 + SQUARE": "",
-        "L1 + TRIANGLE": "",
-        "L1 + SHARE": "",
-        "L1 + OPTIONS": "",
-        "L1 + DPAD_UP": "",
-        "L1 + DPAD_DOWN": "",
-        "L1 + DPAD_LEFT": "",
-        "L1 + DPAD_RIGHT": "",
-        "L1 + PS": "",
-        "L1 + PAD": "",
+        "L2 + CROSS": "",
+        "L2 + CIRCLE": "",
+        "L2 + SQUARE": "",
+        "L2 + TRIANGLE": "",
+        "L2 + SHARE": "",
+        "L2 + OPTIONS": "",
+        "L2 + DPAD_UP": "Undo",
+        "L2 + DPAD_DOWN": "Redo",
+        "L2 + DPAD_LEFT": "",
+        "L2 + DPAD_RIGHT": "",
+        "L2 + PS": "",
+        "L2 + PAD": "",
 
         "R2 + CROSS": "",
         "R2 + CIRCLE": "",
@@ -272,20 +217,7 @@
         "R2 + DPAD_LEFT": "",
         "R2 + DPAD_RIGHT": "",
         "R2 + PS": "",
-        "R2 + PAD": "",
-
-        "L2 + R2 + CROSS": "",
-        "L2 + R2 + CIRCLE": "",
-        "L2 + R2 + SQUARE": "",
-        "L2 + R2 + TRIANGLE": "",
-        "L2 + R2 + SHARE": "",
-        "L2 + R2 + OPTIONS": "",
-        "L2 + R2 + DPAD_UP": "",
-        "L2 + R2 + DPAD_DOWN": "",
-        "L2 + R2 + DPAD_LEFT": "",
-        "L2 + R2 + DPAD_RIGHT": "",
-        "L2 + R2 + PS": "",
-        "L2 + R2 + PAD": ""
+        "R2 + PAD": ""
     
     }
 }
