link additional Anki functions, refine overlay

--- a/ds4_support/config.json
+++ b/ds4_support/config.json
@@ -91,7 +91,7 @@
     "deckBrowser": {
 
         "CROSS": "Enter",
-        "CIRCLE": "Collapse/Expand Deck",
+        "CIRCLE": "Collapse/Expand",
         "SQUARE": "Browser",
         "TRIANGLE": "Statistics",
         "L1": "Undo",
