--- a/contanki/config.json
+++ b/contanki/config.json
@@ -439,10 +439,10 @@
         "dialog": {
 
             "Cross": "Select",
-            "Circle": "",
+            "Circle": "Secondary Select",
             "Square": "",
             "Triangle": "",
-            "L1": "",
+            "L1": "Escape",
             "R1": "Switch Window",
             "Share": "",
             "Options": "",
@@ -450,59 +450,9 @@
             "D-Pad Down": "Down",
             "D-Pad Left": "Select Previous",
             "D-Pad Right": "Select Next",
-            "Right Stick": "",
-            "Left Stick": "",
+            "Right Stick": "Click",
+            "Left Stick": "Select",
             "PS": "Escape",
-            "Pad": "Focus Main",
-
-            "L2 + Cross": "",
-            "L2 + Circle": "",
-            "L2 + Square": "",
-            "L2 + Triangle": "",
-            "L2 + Share": "",
-            "L2 + Options": "",
-            "L2 + D-Pad Up": "",
-            "L2 + D-Pad Down": "",
-            "L2 + D-Pad Left": "",
-            "L2 + D-Pad Right": "",
-            "L2 + Right Stick": "",
-            "L2 + Left Stick": "",
-            "L2 + PS": "",
-            "L2 + Pad": "",
-
-            "R2 + Cross": "",
-            "R2 + Circle": "",
-            "R2 + Square": "",
-            "R2 + Triangle": "",
-            "R2 + Options": "",
-            "R2 + Share": "",
-            "R2 + D-Pad Up": "",
-            "R2 + D-Pad Down": "",
-            "R2 + D-Pad Left": "",
-            "R2 + D-Pad Right": "",
-            "R2 + Right Stick": "",
-            "R2 + Left Stick": "",
-            "R2 + PS": "",
-            "R2 + Pad": ""
-        },
-
-        "browser": {
-
-            "Cross": "",
-            "Circle": "",
-            "Square": "",
-            "Triangle": "",
-            "L1": "",
-            "R1": "",
-            "Share": "",
-            "Options": "",
-            "D-Pad Up": "",
-            "D-Pad Down": "",
-            "D-Pad Left": "",
-            "D-Pad Right": "",
-            "Right Stick": "",
-            "Left Stick": "",
-            "PS": "",
             "Pad": "",
 
             "L2 + Cross": "",
@@ -511,11 +461,11 @@
             "L2 + Triangle": "",
             "L2 + Share": "",
             "L2 + Options": "",
-            "L2 + D-Pad Up": "",
-            "L2 + D-Pad Down": "",
+            "L2 + D-Pad Up": "Scroll Up",
+            "L2 + D-Pad Down": "Scroll Down",
             "L2 + D-Pad Left": "",
             "L2 + D-Pad Right": "",
-            "L2 + Right Stick": "",
+            "L2 + Right Stick": "Secondary Click",
             "L2 + Left Stick": "",
             "L2 + PS": "",
             "L2 + Pad": "",
@@ -531,209 +481,9 @@
             "R2 + D-Pad Left": "",
             "R2 + D-Pad Right": "",
             "R2 + Right Stick": "",
-            "R2 + Left Stick": "",
+            "R2 + Left Stick": "Secondary Select",
             "R2 + PS": "",
             "R2 + Pad": ""
-        },
-
-        "add": {
-
-            "Cross": "",
-            "Circle": "",
-            "Square": "",
-            "Triangle": "",
-            "L1": "",
-            "R1": "",
-            "Share": "",
-            "Options": "",
-            "D-Pad Up": "",
-            "D-Pad Down": "",
-            "D-Pad Left": "",
-            "D-Pad Right": "",
-            "Right Stick": "",
-            "Left Stick": "",
-            "PS": "",
-            "Pad": "",
-
-            "L2 + Cross": "",
-            "L2 + Circle": "",
-            "L2 + Square": "",
-            "L2 + Triangle": "",
-            "L2 + Share": "",
-            "L2 + Options": "",
-            "L2 + D-Pad Up": "",
-            "L2 + D-Pad Down": "",
-            "L2 + D-Pad Left": "",
-            "L2 + D-Pad Right": "",
-            "L2 + Right Stick": "",
-            "L2 + Left Stick": "",
-            "L2 + PS": "",
-            "L2 + Pad": "",
-
-            "R2 + Cross": "",
-            "R2 + Circle": "",
-            "R2 + Square": "",
-            "R2 + Triangle": "",
-            "R2 + Options": "",
-            "R2 + Share": "",
-            "R2 + D-Pad Up": "",
-            "R2 + D-Pad Down": "",
-            "R2 + D-Pad Left": "",
-            "R2 + D-Pad Right": "",
-            "R2 + Right Stick": "",
-            "R2 + Left Stick": "",
-            "R2 + PS": "",
-            "R2 + Pad": ""
-        },
-
-        "edit": {
-
-            "Cross": "",
-            "Circle": "",
-            "Square": "",
-            "Triangle": "",
-            "L1": "",
-            "R1": "",
-            "Share": "",
-            "Options": "",
-            "D-Pad Up": "",
-            "D-Pad Down": "",
-            "D-Pad Left": "",
-            "D-Pad Right": "",
-            "Right Stick": "",
-            "Left Stick": "",
-            "PS": "",
-            "Pad": "",
-
-            "L2 + Cross": "",
-            "L2 + Circle": "",
-            "L2 + Square": "",
-            "L2 + Triangle": "",
-            "L2 + Share": "",
-            "L2 + Options": "",
-            "L2 + D-Pad Up": "",
-            "L2 + D-Pad Down": "",
-            "L2 + D-Pad Left": "",
-            "L2 + D-Pad Right": "",
-            "L2 + Right Stick": "",
-            "L2 + Left Stick": "",
-            "L2 + PS": "",
-            "L2 + Pad": "",
-
-            "R2 + Cross": "",
-            "R2 + Circle": "",
-            "R2 + Square": "",
-            "R2 + Triangle": "",
-            "R2 + Options": "",
-            "R2 + Share": "",
-            "R2 + D-Pad Up": "",
-            "R2 + D-Pad Down": "",
-            "R2 + D-Pad Left": "",
-            "R2 + D-Pad Right": "",
-            "R2 + Right Stick": "",
-            "R2 + Left Stick": "",
-            "R2 + PS": "",
-            "R2 + Pad": ""
-        },
-
-        "options": {
-
-            "Cross": "",
-            "Circle": "",
-            "Square": "",
-            "Triangle": "",
-            "L1": "",
-            "R1": "",
-            "Share": "",
-            "Options": "",
-            "D-Pad Up": "",
-            "D-Pad Down": "",
-            "D-Pad Left": "",
-            "D-Pad Right": "",
-            "Right Stick": "",
-            "Left Stick": "",
-            "PS": "",
-            "Pad": "",
-
-            "L2 + Cross": "",
-            "L2 + Circle": "",
-            "L2 + Square": "",
-            "L2 + Triangle": "",
-            "L2 + Share": "",
-            "L2 + Options": "",
-            "L2 + D-Pad Up": "",
-            "L2 + D-Pad Down": "",
-            "L2 + D-Pad Left": "",
-            "L2 + D-Pad Right": "",
-            "L2 + Right Stick": "",
-            "L2 + Left Stick": "",
-            "L2 + PS": "",
-            "L2 + Pad": "",
-
-            "R2 + Cross": "",
-            "R2 + Circle": "",
-            "R2 + Square": "",
-            "R2 + Triangle": "",
-            "R2 + Options": "",
-            "R2 + Share": "",
-            "R2 + D-Pad Up": "",
-            "R2 + D-Pad Down": "",
-            "R2 + D-Pad Left": "",
-            "R2 + D-Pad Right": "",
-            "R2 + Right Stick": "",
-            "R2 + Left Stick": "",
-            "R2 + PS": "",
-            "R2 + Pad": ""
-        },
-
-        "preferences": {
-
-            "Cross": "",
-            "Circle": "",
-            "Square": "",
-            "Triangle": "",
-            "L1": "",
-            "R1": "",
-            "Share": "",
-            "Options": "",
-            "D-Pad Up": "",
-            "D-Pad Down": "",
-            "D-Pad Left": "",
-            "D-Pad Right": "",
-            "Right Stick": "",
-            "Left Stick": "",
-            "PS": "",
-            "Pad": "",
-
-            "L2 + Cross": "",
-            "L2 + Circle": "",
-            "L2 + Square": "",
-            "L2 + Triangle": "",
-            "L2 + Share": "",
-            "L2 + Options": "",
-            "L2 + D-Pad Up": "",
-            "L2 + D-Pad Down": "",
-            "L2 + D-Pad Left": "",
-            "L2 + D-Pad Right": "",
-            "L2 + Right Stick": "",
-            "L2 + Left Stick": "",
-            "L2 + PS": "",
-            "L2 + Pad": "",
-
-            "R2 + Cross": "",
-            "R2 + Circle": "",
-            "R2 + Square": "",
-            "R2 + Triangle": "",
-            "R2 + Options": "",
-            "R2 + Share": "",
-            "R2 + D-Pad Up": "",
-            "R2 + D-Pad Down": "",
-            "R2 + D-Pad Left": "",
-            "R2 + D-Pad Right": "",
-            "R2 + Right Stick": "",
-            "R2 + Left Stick": "",
-            "R2 + PS": "",
-            "R2 + Pad": ""
-        }       
+        }
     }
 }
