Fix packaging error

--- a/contanki/manifest.json
+++ b/contanki/manifest.json
@@ -1,4 +1,7 @@
 {
     "package": "contanki",
-    "name": "Contanki - Controller Support"
+    "name": "Contanki - Controller Support",
+    "author": "Sam Bradshaw",
+    "human_version": "v0.1a",
+    "homepage": "https://github.com/roxgib/anki-contanki"
 }
