--- a/contanki/config.json
+++ b/contanki/config.json
@@ -46,7 +46,7 @@
             "Options": "",
             "D-Pad Up": "",
             "D-Pad Down": "Replay Audio",
-            "D-Pad Left": "Cycle Flag",
+            "D-Pad Left": "Flag",
             "D-Pad Right": "Show Hint",
             "Right Stick": "",
             "Left Stick": "",
